# market-strategy

./: FINAL_QA_REPORT.md  GITHUB_UPLOAD_FILE_INVENTORY.md  GITHUB_UPLOAD_MANIFEST.json  GITHUB_UPLOAD_README.md  PHASE1-IMPLEMENTATION.md  PHASE2-IMPLEMENTATION.md  PHASE3-IMPLEMENTATION.md  PHASE4-IMPLEMENTATION.md  PHASE5-PRODUCTION-EXPANSION.md  PHASE6-LCE-SDK-COMPATIBILITY.md  README.md  SERVICES_UPLOAD_TEST.txt  docker-compose.yml  package.json  render.yaml
.github/workflows/: restore-services.yml
api/: package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/scripts/: production-smoke-test.mjs
api/src/: config.ts  db.ts  index.ts
api/tests/: backtester.test.ts  confluence.test.ts  custody-policy.test.ts  health.test.ts  heatmap.test.ts  high-density-heatmap.test.ts  intervals.test.ts  lce-data-mapper.test.ts  normalizers.test.ts  (+8 more)
contracts/: foundry.toml  hardhat.config.ts  package.json  slither.config.json
docs/: architecture-blueprint.md  edge-cases.md  lce-sdk-compatibility-map.md  lce-sdk-readonly-inspection-report.md  phase1-module-map.md  phase1-runbook.md  phase2-module-map.md  phase3-module-map.md  phase3-runbook.md  phase4-module-map.md  phase4-runbook.md  phase5-production-readiness.md  security-compliance.md  tokenomics.md
ingestor-rust/: Cargo.toml
ingestor-rust/src/: main.rs
ingestor-rust/src/connectors/: dydx.rs  hyperliquid.rs  mod.rs
mobile/: README.md
scripts/: apply-clickhouse-schema.ps1  apply-clickhouse-schema.sh  install-lce-sdk.mjs  run-phase4-smoke-test.ps1  run-phase4-smoke-test.sh  verify-lce-sdk.mjs
(+134 files in other folders)
